fix: redo broken html after merge

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       <p class="footer__copyright">&#169; 2020 Around The U.S.</p>
     </footer>
     <div class="popup popup_background_light js-popup-profile">
-      <div class="popup__container">
+      <div class="popup__container popup__container_type_form">
         <button
-          class="popup__btn-close button js-close-btn"
+          class="popup__btn-close button"
           type="button">
         </button>
-        <form class="form js-form" action="#" name="profile form" novalidate>
+        <form class="form" action="#" name="profile form" novalidate>
           <h2 class="form__title">Edit profile</h2>
           <input id="text-input"
             type="text"
@@ -59,12 +59,12 @@
       </div>
     </div>
     <div class="popup popup_background_light js-popup-photo-form">
-      <div class="popup__container">
+      <div class="popup__container popup__container_type_form">
         <button
-          class="popup__btn-close button js-close-btn"
+          class="popup__btn-close button"
           type="button">
         </button>
-        <form class="form js-form" action="#" name="new place" novalidate>
+        <form class="form" action="#" name="new place" novalidate>
           <h2 class="form__title">New Place</h2>
           <input
             type="text"
