fix: add required attribute

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
             type="text"
             class="form__input js-input-title"
             name="title"
-            placeholder="Title" minlength="1" pattern="[a-zA-Z0-9]{1,30}"
+            placeholder="Title" minlength="1" pattern="[a-zA-Z0-9]{1,30}" required
           >
           <span id="title-input-error" class="form__input-error"></span>
           <input id="link-input"
             type="url"
             class="form__input js-input-link"
             name="link"
-            placeholder="Image link"
+            placeholder="Image link" required
           >
           <span id="link-input-error" class="form__input-error"></span>
           <button class="form__submit-btn" type="submit">Create</button>
