--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
         </div>
       </li>
     </template>
-    <script src="scripts/script.js"></script>
-    <script src="scripts/validate.js"></script>
+    <script type = "module" src="scripts/script.js"></script>
   </body>
 </html>
