--- a/index.html
+++ b/index.html
@@ -111,6 +111,6 @@
         </div>
       </li>
     </template>
-    <script type = "module" src="scripts/script.js"></script>
+    <script type = "module" src="scripts/index.js"></script>
   </body>
 </html>
