feat: get data from form and render on page

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             id="title-input"
             type="text"
             class="form__input js-input-title"
-            name="title"
+            name="name"
             placeholder="Title"
             minlength="1"
             maxlength="30"
