--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pages/index.css">
+    <!-- <link rel="stylesheet" href="pages/index.css"> -->
     <title>Around The U.S.</title>
   </head>
   <body class="page">
@@ -111,6 +111,5 @@
         </div>
       </li>
     </template>
-    <script type = "module" src="scripts/index.js"></script>
   </body>
 </html>
