feat: load user avatar and info from server

--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,15 @@
       <section class="profile page__section">
         <div class="media">
           <img
-            src="images/Cousteau.png"
             alt="profile image"
             class="media__image"
           >
           <div class="media__body">
             <div class="media__item">
-              <h1 class="media__name">Jacques Cousteau</h1>
+              <h1 class="media__name"></h1>
               <button class="media__btn button" type="button"></button>
             </div>
-            <p class="media__job">Explorer</p>
+            <p class="media__job"></p>
           </div>
         </div>
         <button class="profile__btn button" type="button"></button>
