feat: send patch user info

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
             required
             type="text"
             class="form__input js-input-job"
-            name="job"
+            name="about"
             placeholder="About me"
             minlength="2"
             maxlength="200"
