--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,10 @@
         <div class="card__img"></div>
         <div class="card__description-wrapper">
           <h2 class="card__title"></h2>
-          <button class="card__like button"></button>
+          <div class="card__likes-container">
+            <button class="card__like button"></button>
+            <p class="card__likes"></p>
+          </div>
         </div>
       </li>
     </template>
