feat: create popup before del cars

--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,15 @@
         <h2 class="popup__title"></h2>
       </div>
     </div>
+    <div class="popup popup_background_light js-popup-del-card">
+      <div class="popup__container popup__container_type_form">
+        <button class="popup__btn-close button" type="button"></button>
+        <form class="form" action="#" name="delete card" novalidate>
+          <h2 class="form__title">Are you sure?</h2>
+          <button class="form__submit-btn" type="submit">Yes</button>
+        </form>
+      </div>
+    </div>
     <template class="js-card-template">
       <li class="card">
         <button class="button card__del"></button>
