feat: delete card on confirm

--- a/src/index.html
+++ b/src/index.html
@@ -103,10 +103,10 @@
     <div class="popup popup_background_light js-popup-del-card">
       <div class="popup__container popup__container_type_form">
         <button class="popup__btn-close button" type="button"></button>
-        <div class="form">
+        <form class="form" action="#" name="delete card" novalidate>
           <h2 class="form__title">Are you sure?</h2>
-          <button class="form__submit-btn" type="button">Yes</button>
-        </div>
+          <button class="form__submit-btn" type="submit">Yes</button>
+        </form>
       </div>
     </div>
     <div class="popup popup_background_light js-popup-change-avatar">
