--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
             required
           />
           <span id="avatar-input-error" class="form__input-error"></span>
-          <button class="form__submit-btn" type="submit">Save</button>
+          <button class="form__submit-btn" type="submit" data-text="Save">Save</button>
         </form>
       </div>
     </div>
