feat: ad button text onload

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
             maxlength="200"
           />
           <span id="job-input-error" class="form__input-error"></span>
-          <button class="form__submit-btn" type="submit">Save</button>
+          <button class="form__submit-btn" type="submit" data-text="Save">Save</button>
         </form>
       </div>
     </div>
@@ -94,7 +94,7 @@
             required
           />
           <span id="link-input-error" class="form__input-error"></span>
-          <button class="form__submit-btn" type="submit">Create</button>
+          <button class="form__submit-btn" type="submit" data-text="Create">Create</button>
         </form>
       </div>
     </div>
